# coal

./: .editorconfig  Cargo.toml  DEVELOPMENT.md  Makefile  README.md
coal/: Cargo.toml  README.md
coal-compiler/: Cargo.toml  README.md
coal-compiler/src/: compiler.rs  error.rs  lib.rs  symbol.rs  tests.rs
coal-core/: Cargo.toml  README.md
coal-core/src/: lib.rs  token.rs
coal-core/src/ast/: builtin.rs  comment.rs  expr.rs  func.rs  ident.rs  infix.rs  list.rs  literal.rs  map.rs  mod.rs  param.rs  prefix.rs  program.rs  stmt.rs  struct.rs  types.rs  var.rs
coal-core/src/builtins/: assert.rs  assert_eq.rs  dbg.rs  def.rs  mod.rs  print.rs  println.rs
coal-core/src/compiler/: code.rs  code_tests.rs  compiler.rs  compiler_tests.rs  error.rs  mod.rs  symbol.rs  tests.rs
coal-core/src/compiler/object/: builtin.rs  func.rs  mod.rs  struct.rs
coal-core/src/evaluator/: env.rs  error.rs  mod.rs  object.rs  tests.rs
coal-core/src/evaluator/builtins/: assert.rs  assert_eq.rs  builtin.rs  dbg.rs  def.rs  mod.rs  print.rs  println.rs  typeof.rs
coal-core/src/evaluator/object/: struct.rs
coal-core/src/lexer/: mod.rs  node.rs  tests.rs  token.rs
coal-core/src/parser/: error.rs  function_context.rs  mod.rs  precedence.rs  symbol_table.rs  tests.rs  warning.rs
coal-core/src/utils/: indent.rs  input.rs  mod.rs
coal-core/src/vm/: frame.rs  mod.rs
coal-interpreter/: Cargo.toml
coal-interpreter/src/: env.rs  error.rs  evaluator.rs  lib.rs  tests.rs
coal-objects/: Cargo.toml
coal-objects/src/: builtin.rs  constant.rs  func.rs  lib.rs  object.rs  struct.rs
coal-vm/: Cargo.toml  README.md
coal-vm/src/: frame.rs  lib.rs  tests.rs  vm.rs
coal/src/: binfmt.rs  bytes.rs  cli.rs  fs.rs  io.rs  lib.rs  main.rs  output.rs  path.rs  string.rs
coal/src/commands/: clean.rs  compile.rs  eval.rs  fmt.rs  lint.rs  mod.rs  new.rs  parse.rs  repl.rs  run.rs
coal/templates/: hello.coal
configs/nvim/: init.lua
docker/: Dockerfile
docs/: examples.md
examples/: asdf.coal  conditionals.coal  enums.coal  fib.coal  functions.coal  if-else.coal  if_else.coal  inference.coal  lists.coal  loops.coal  maps.coal  math.coal  matmul.coal  matrices.coal  structs.coal
extensions/vscode-coal/: .dockerignore  .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
src/: cli.rs  fmt.rs  lexer.rs  lib.rs  main.rs  parser.rs  path.rs  repl.rs  run.rs  token.rs
src/ast/: expr.rs  ident.rs  infix.rs  literal.rs  mod.rs  prefix.rs  program.rs  stmt.rs  types.rs  var.rs
(+21 files in other folders)
