[package]
name = "coal-core"
description = "General purpose programming language"
version = "0.1.0"
edition = "2024"
authors = ["Andrew X. Shah <drew@drewxs.dev>"]
repository = "https://github.com/drewxs/coal"
readme = "README.md"
license = "Apache-2.0"

[dependencies]
regex = "1.12.3"
thiserror = "2.0.18"
